--- a/restaurants/dias-market.html
+++ b/restaurants/dias-market.html
@@ -141,54 +141,75 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Dia's Market</h2>
-                            <p class="description">Dia's Market is a charming East Austin specialty grocery store and deli that has become a neighborhood favorite. Offering a curated selection of quality meats, cheeses, prepared foods, and grocery items, Dia's provides a European-style market experience with local Austin flair.</p>
-                            <p>What makes Dia's special for gluten-free diners is their willingness to accommodate with GF bread options for their deli sandwiches, allowing everyone to enjoy their quality ingredients.</p>
+                            <p class="description">Dia's Market is a charming East Austin specialty grocery store and deli that has become a beloved neighborhood institution. Offering a curated selection of quality meats, cheeses, prepared foods, and grocery items, Dia's provides a European-style market experience with authentic Austin charm.</p>
+                            <p>What sets Dia's apart is their dedication to quality ingredients and personal service. The owners have built relationships with local purveyors and carefully select every product in the store. For gluten-free diners, Dia's offers GF bread options for their famous deli sandwiches, ensuring everyone can enjoy their exceptional ingredients.</p>
+                            <p>The market has become a gathering spot for East Austin residents who appreciate good food and community connection. It's the kind of place where the staff knows your name and remembers your regular order.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Options</h2>
                             <p>Dia's Market offers several GF-friendly options:</p>
                             <ul class="gf-features">
-                                <li><strong>GF Bread Available:</strong> Request gluten-free bread for sandwiches</li>
-                                <li><strong>Quality Meats & Cheeses:</strong> Naturally gluten-free deli items</li>
-                                <li><strong>Prepared Salads:</strong> Many prepared salads are GF-friendly</li>
-                                <li><strong>Grab-and-Go:</strong> Check labels on prepared foods for GF options</li>
-                                <li><strong>Grocery Section:</strong> GF products available for purchase</li>
+                                <li><strong>GF Bread Available:</strong> Request gluten-free bread for any sandwich</li>
+                                <li><strong>Premium Deli Meats:</strong> Quality sliced meats are naturally gluten-free</li>
+                                <li><strong>Artisan Cheeses:</strong> Extensive cheese selection, all naturally GF</li>
+                                <li><strong>Prepared Salads:</strong> Many fresh salads are GF-friendly (ask staff)</li>
+                                <li><strong>Grab-and-Go Items:</strong> Check labels on prepared foods for GF options</li>
+                                <li><strong>Grocery Section:</strong> Curated selection of GF products for home</li>
                             </ul>
-                            <p><strong>Note:</strong> This is a shared kitchen—inform staff about celiac disease for proper handling.</p>
+                            <p><strong>Cross-Contamination Note:</strong> Dia's is a shared kitchen environment. While they're happy to use GF bread and accommodate requests, sandwiches are made on shared surfaces. Inform staff about celiac disease for extra precautions, though those with severe sensitivity should be aware of the shared prep area.</p>
                         </div>
 
                         <div class="section">
                             <h2>What to Order</h2>
                             <ul>
-                                <li><strong>Custom Sandwiches (GF bread):</strong> Build your own with quality meats and cheeses</li>
-                                <li><strong>Prepared Salads:</strong> Fresh salads made daily</li>
-                                <li><strong>Cheese Plates:</strong> Selection of quality cheeses (naturally GF)</li>
-                                <li><strong>Charcuterie:</strong> Quality cured meats (check for GF)</li>
+                                <li><strong>The Dia's Sandwich (GF bread):</strong> Their signature sandwich with premium meats and house-made spreads</li>
+                                <li><strong>Custom Deli Sandwiches:</strong> Build your own with quality meats, cheeses, and toppings</li>
+                                <li><strong>Prepared Salads:</strong> Fresh, seasonal salads made daily</li>
+                                <li><strong>Cheese Plates:</strong> Selection of imported and domestic artisan cheeses</li>
+                                <li><strong>Charcuterie:</strong> Quality cured meats from trusted producers (verify GF status)</li>
+                                <li><strong>Take-Home Items:</strong> Olives, pickles, and specialty grocery items</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>The Market Experience</h2>
-                            <p>Dia's Market is more than just a place to grab a sandwich—it's a neighborhood gathering spot. The small but well-curated grocery selection features specialty items you won't find at typical grocery stores, including local Austin products, imported cheeses, and quality pantry staples.</p>
-                            <p>The casual counter-service format makes it perfect for a quick lunch or picking up items for dinner at home.</p>
+                            <h2>Tips for GF Ordering</h2>
+                            <p>Make the most of your Dia's visit with these tips:</p>
+                            <ul>
+                                <li><strong>Request Fresh Gloves:</strong> Ask staff to change gloves when making your GF sandwich</li>
+                                <li><strong>Ask About Daily Specials:</strong> Some specials may be naturally GF or easily modified</li>
+                                <li><strong>Check Prepared Foods:</strong> Staff can tell you which prepared items are GF</li>
+                                <li><strong>Go for Lunch:</strong> The sandwich counter is busiest midday—go early or late for more attention to GF prep</li>
+                                <li><strong>Explore the Grocery:</strong> Their curated selection often includes hard-to-find GF items</li>
+                            </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Dia's Experience</h2>
+                            <p>Walking into Dia's Market feels like stepping into a European deli. The compact space is filled with carefully curated products: wheels of cheese, jars of imported olives, artisan crackers, and a refrigerated case of prepared foods. The deli counter showcases quality meats ready to be sliced for sandwiches or to take home.</p>
+                            <p>The atmosphere is casual and neighborly. Local East Austin residents stop by for their regular lunch orders, picking up a sandwich and a specialty drink before heading back to work. Weekend mornings bring families grabbing breakfast sandwiches and local coffee. It's the kind of place that makes you feel like you've discovered a hidden gem—even though it's been a neighborhood staple for years.</p>
+                            <p>Staff members are knowledgeable about their products and happy to make recommendations or accommodate dietary requests. The personal service is part of what makes Dia's special.</p>
                         </div>
 
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Love that they have GF bread! The sandwiches are delicious and the market is so cute." — Emily R., Austin
+                                "Love that they have GF bread! The sandwiches are delicious and the market is so cute. Staff is always friendly and accommodating." — Emily R., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Great neighborhood spot. The staff is friendly and happy to accommodate dietary needs." — Mark S., East Austin
+                                "Great neighborhood spot. The staff is friendly and happy to accommodate dietary needs. The cheese selection alone is worth the visit!" — Mark S., East Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "This place is a gem. Quality ingredients and they actually have good GF bread. My go-to lunch spot in East Austin." — David L., Mueller
                             </blockquote>
                         </div>
 
                         <div class="nearby-restaurants">
                             <h3>Nearby Restaurants</h3>
                             <ul>
-                                <li><a href="il-brutto.html">Il Brutto</a> - East Austin</li>
-                                <li><a href="intero.html">Intero</a> - East Austin</li>
+                                <li><a href="il-brutto.html">Il Brutto</a> - East Austin (GF Pasta)</li>
+                                <li><a href="intero.html">Intero</a> - East Austin (GF Options)</li>
+                                <li><a href="bird-bird-biscuit.html">Bird Bird Biscuit</a> - East Austin (GF Biscuits)</li>
                             </ul>
                         </div>
 
