--- a/restaurants/flower-child---domain.html
+++ b/restaurants/flower-child---domain.html
@@ -144,7 +144,8 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Flower Child - Domain</h2>
-                            <p class="description">Located in the heart of The Domain's Rock Rose district, this Flower Child location brings healthy, feel-good food to North Austin's premier shopping and entertainment destination. Perfect for a nutritious break between shopping or before catching a movie, Flower Child offers a bright, welcoming atmosphere and a menu designed to make you feel great.</p>
+                            <p class="description">Located in the heart of The Domain's Rock Rose district, this Flower Child location brings healthy, feel-good food to North Austin's premier shopping and entertainment destination. Perfect for a nutritious break between shopping, before catching a movie, or meeting friends for a casual healthy meal.</p>
+                            <p>The Domain location benefits from its prime position in one of Austin's most popular outdoor shopping and dining districts. With a bright, welcoming atmosphere and a menu designed to make you feel great, it's become a go-to for health-conscious shoppers and local workers alike.</p>
                             <p>Part of Fox Restaurant Concepts (the same group behind True Food Kitchen), Flower Child focuses on fresh, organic ingredients and caters to various dietary needs including gluten-free, vegetarian, and vegan diners.</p>
                         </div>
 
@@ -152,25 +153,47 @@
                             <h2>Gluten-Free Dining at Flower Child</h2>
                             <p>Flower Child is exceptionally GF-friendly with clearly marked menu items:</p>
                             <ul class="gf-features">
-                                <li><strong>Clearly Marked Menu:</strong> GF items are labeled with a "GF" indicator</li>
-                                <li><strong>Extensive GF Options:</strong> Many bowls, salads, and proteins are naturally GF</li>
-                                <li><strong>Customizable:</strong> Build your own plate or bowl with GF ingredients</li>
-                                <li><strong>Knowledgeable Staff:</strong> Team trained on dietary restrictions</li>
+                                <li><strong>Clearly Marked Menu:</strong> GF items labeled with prominent "GF" indicators</li>
+                                <li><strong>Extensive GF Options:</strong> More than half the menu is naturally GF or easily modified</li>
+                                <li><strong>Customizable Plates:</strong> Build your own bowl or plate with GF ingredients</li>
+                                <li><strong>Trained Staff:</strong> Team knowledgeable about dietary restrictions and cross-contamination</li>
                                 <li><strong>App Ordering:</strong> Filter for GF options when ordering through their app</li>
+                                <li><strong>Catering Available:</strong> GF options for events and group orders</li>
                             </ul>
-                            <p><strong>Note:</strong> While they have extensive GF options, this is not a dedicated GF kitchen. Cross-contamination is possible—inform staff of celiac disease for extra precautions.</p>
+                            <p><strong>Cross-Contamination Note:</strong> While they have extensive GF options, this is not a dedicated GF kitchen. Flower Child prepares items with gluten (bread and some sauces). Inform staff of celiac disease for extra precautions—they're generally excellent at accommodating.</p>
                         </div>
 
                         <div class="section">
                             <h2>Popular GF Menu Items</h2>
                             <p>Many of Flower Child's signature items are gluten-free:</p>
                             <ul>
-                                <li><strong>Mother Earth Bowl (GF):</strong> Ancient grains, sweet potato, portobello, avocado, leafy greens</li>
-                                <li><strong>Glow Bowl (GF):</strong> Quinoa, salmon, avocado, pickled vegetables</li>
-                                <li><strong>Grass-Fed Steak Plate (GF):</strong> With seasonal vegetables</li>
-                                <li><strong>Organic Tofu Plate (GF):</strong> With your choice of sides</li>
-                                <li><strong>Superfood Salads (GF):</strong> Various salad options with GF dressings</li>
+                                <li><strong>Mother Earth Bowl (GF):</strong> Ancient grains, sweet potato, portobello mushroom, avocado, leafy greens with lemon tahini</li>
+                                <li><strong>Glow Bowl (GF):</strong> Quinoa, wild-caught salmon, avocado, pickled vegetables</li>
+                                <li><strong>Grass-Fed Steak Plate (GF):</strong> Premium steak with two GF sides</li>
+                                <li><strong>Organic Chicken Plate (GF):</strong> Free-range chicken with seasonal vegetables</li>
+                                <li><strong>Organic Tofu Plate (GF):</strong> Crispy tofu with your choice of sides</li>
+                                <li><strong>Thai Cashew Quinoa (GF):</strong> Spicy Thai-inspired bowl</li>
+                                <li><strong>Superfood Salads (GF):</strong> Various creative salads with GF dressings</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Tips for GF Ordering at The Domain</h2>
+                            <p>Make the most of your Flower Child visit:</p>
+                            <ul>
+                                <li><strong>Check the Menu Key:</strong> Look for the GF symbol next to items</li>
+                                <li><strong>Order Through the App:</strong> Filter by GF and have your order ready for pickup</li>
+                                <li><strong>Build Your Own:</strong> The build-your-own option lets you control exactly what goes in</li>
+                                <li><strong>Ask About Sauces:</strong> Most dressings are GF but verify before ordering</li>
+                                <li><strong>Go Off-Peak:</strong> The lunch rush (12-1pm) can be busy—go earlier or later</li>
+                            </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Domain Location Experience</h2>
+                            <p>The Rock Rose location features Flower Child's signature bright, plant-filled aesthetic with indoor seating and a pleasant patio on the Rock Rose pedestrian walkway. The fast-casual format—order at the counter, food brought to your table—makes it efficient while still feeling like a sit-down experience.</p>
+                            <p>The location draws a mix of shoppers taking a healthy break, tech workers from nearby offices, and groups of friends meeting for lunch. It's particularly popular on weekends when The Domain is bustling with activity.</p>
+                            <p>Parking at The Domain can fill up, but there are multiple garages available. The restaurant is right in the heart of the action, making it easy to combine with shopping or other activities.</p>
                         </div>
 
                         <div class="section">
@@ -185,10 +208,13 @@
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Perfect spot for a healthy lunch at The Domain. The GF options are clearly labeled and the staff is always helpful." — Jennifer T., Austin
+                                "Perfect spot for a healthy lunch at The Domain. The GF options are clearly labeled and the staff is always helpful with my celiac questions." — Jennifer T., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Love grabbing a bowl here after shopping. Fresh, flavorful, and safe for my celiac." — Marcus L., Round Rock
+                                "Love grabbing a bowl here after shopping. Fresh, flavorful, and safe for my celiac. The Mother Earth bowl is my go-to!" — Marcus L., Round Rock
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Best healthy restaurant at The Domain. My friends and I come here every time we're shopping—everyone finds something they love." — Rachel K., North Austin
                             </blockquote>
                         </div>
 
@@ -196,7 +222,8 @@
                             <h3>Nearby Restaurants</h3>
                             <ul>
                                 <li><a href="true-food-kitchen---domain.html">True Food Kitchen - Domain</a> - The Domain</li>
-                                <li><a href="picnik---burnet-road.html">Picnik - Burnet Road</a> - North Austin</li>
+                                <li><a href="picnik---burnet-road.html">Picnik - Burnet Road</a> - North Austin (100% GF)</li>
+                                <li><a href="bulevar.html">Bulevar</a> - Arboretum (100% GF)</li>
                             </ul>
                         </div>
 
