--- a/restaurants/flower-child---round-rock.html
+++ b/restaurants/flower-child---round-rock.html
@@ -141,32 +141,56 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Flower Child - Round Rock</h2>
-                            <p class="description">Flower Child brings its healthy, feel-good food concept to Round Rock, offering residents north of Austin access to fresh, organic bowls, salads, and plates. This location maintains the same commitment to quality and dietary accommodation that has made Flower Child a favorite across Texas.</p>
-                            <p>Part of Fox Restaurant Concepts (the same group behind True Food Kitchen), Flower Child focuses on ingredients that make you feel great and caters to various dietary needs including gluten-free, vegetarian, and vegan diners.</p>
+                            <p class="description">Flower Child brings its healthy, feel-good food concept to Round Rock, offering residents north of Austin access to fresh, organic bowls, salads, and plates. This location maintains the same commitment to quality and dietary accommodation that has made Flower Child a favorite across Texas and beyond.</p>
+                            <p>Part of Fox Restaurant Concepts (the same group behind True Food Kitchen), Flower Child was created around the idea that healthy food should taste amazing and make you feel great. The Round Rock location opened to serve the growing suburban communities north of Austin who were previously driving to the Domain or South Lamar for their Flower Child fix.</p>
+                            <p>The restaurant focuses on real, whole ingredients that nourish your body. Everything is made in-house daily, from scratch, using organic and sustainably-sourced ingredients whenever possible.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Dining at Flower Child</h2>
                             <p>Flower Child is exceptionally GF-friendly with clearly marked menu items:</p>
                             <ul class="gf-features">
-                                <li><strong>Clearly Marked Menu:</strong> GF items are labeled with a "GF" indicator</li>
-                                <li><strong>Extensive GF Options:</strong> Many bowls, salads, and proteins are naturally GF</li>
-                                <li><strong>Customizable:</strong> Build your own plate or bowl with GF ingredients</li>
-                                <li><strong>Knowledgeable Staff:</strong> Team trained on dietary restrictions</li>
+                                <li><strong>Clearly Marked Menu:</strong> GF items are labeled with a prominent "GF" indicator</li>
+                                <li><strong>Extensive GF Options:</strong> More than half the menu is naturally gluten-free</li>
+                                <li><strong>Customizable Plates:</strong> Build your own plate or bowl with GF proteins and sides</li>
+                                <li><strong>Knowledgeable Staff:</strong> Team is trained on dietary restrictions and cross-contamination</li>
                                 <li><strong>App Ordering:</strong> Filter for GF options when ordering through their app</li>
+                                <li><strong>Separate Prep:</strong> Staff can use clean utensils and surfaces when requested</li>
                             </ul>
-                            <p><strong>Note:</strong> While they have extensive GF options, this is not a dedicated GF kitchen. Cross-contamination is possible—inform staff of celiac disease for extra precautions.</p>
+                            <p><strong>Cross-Contamination Note:</strong> While they have extensive GF options, this is not a dedicated GF kitchen. Flower Child does prepare items with gluten (like their bread and some sauces). Inform staff of celiac disease for extra precautions—they're generally excellent at accommodating.</p>
                         </div>
 
                         <div class="section">
                             <h2>Popular GF Menu Items</h2>
                             <ul>
-                                <li><strong>Mother Earth Bowl (GF):</strong> Ancient grains, sweet potato, portobello, avocado, leafy greens</li>
-                                <li><strong>Glow Bowl (GF):</strong> Quinoa, salmon, avocado, pickled vegetables</li>
-                                <li><strong>Grass-Fed Steak Plate (GF):</strong> With seasonal vegetables</li>
-                                <li><strong>Organic Tofu Plate (GF):</strong> With your choice of sides</li>
-                                <li><strong>Superfood Salads (GF):</strong> Various salad options with GF dressings</li>
+                                <li><strong>Mother Earth Bowl (GF):</strong> Ancient grains, sweet potato, portobello mushroom, avocado, leafy greens with lemon tahini dressing</li>
+                                <li><strong>Glow Bowl (GF):</strong> Quinoa, wild-caught salmon, avocado, pickled vegetables, leafy greens</li>
+                                <li><strong>Grass-Fed Steak Plate (GF):</strong> Premium grass-fed steak with choice of two GF sides</li>
+                                <li><strong>Organic Chicken Plate (GF):</strong> Free-range organic chicken with seasonal vegetables</li>
+                                <li><strong>Organic Tofu Plate (GF):</strong> Crispy organic tofu with your choice of sides</li>
+                                <li><strong>Kale Salad (GF):</strong> Superfood salad with avocado, seeds, and GF dressing</li>
+                                <li><strong>Thai Cashew Quinoa (GF):</strong> Spicy Thai-inspired bowl with vegetables and cashews</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Tips for GF Ordering</h2>
+                            <p>Maximize your Flower Child experience with these tips:</p>
+                            <ul>
+                                <li><strong>Check the Menu Key:</strong> Look for the GF symbol next to menu items</li>
+                                <li><strong>Tell Your Server:</strong> Let them know about your gluten-free needs right away</li>
+                                <li><strong>Ask About Sauces:</strong> Most dressings are GF, but verify before ordering</li>
+                                <li><strong>Build Your Own:</strong> The build-your-own plate option lets you control exactly what goes in your meal</li>
+                                <li><strong>Order Online:</strong> The app lets you filter by GF, making ordering easier</li>
+                                <li><strong>Try Family Style:</strong> Their shareable portions work great for families with mixed dietary needs</li>
+                            </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Round Rock Experience</h2>
+                            <p>The Round Rock Flower Child features the brand's signature bright, welcoming atmosphere with natural materials, live plants, and an upbeat vibe. The space is designed to make you feel good before you even eat—lots of natural light, cheerful colors, and an open kitchen where you can watch your food being prepared.</p>
+                            <p>The fast-casual format means you order at the counter and food is brought to your table, making it efficient for busy families but still feeling like a sit-down restaurant experience. The location draws a mix of families with kids, health-conscious professionals grabbing lunch, and groups of friends meeting for a healthy meal.</p>
+                            <p>Parking is convenient at this location, and the restaurant handles the suburban family crowd well with plenty of seating and a menu that has something for everyone—including picky eaters who might not think they like "healthy" food.</p>
                         </div>
 
                         <div class="section">
@@ -180,7 +204,13 @@
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "So glad they opened in Round Rock! No need to drive to Austin for healthy, GF-friendly food anymore." — Amanda P., Round Rock
+                                "So glad they opened in Round Rock! No need to drive to Austin for healthy, GF-friendly food anymore. The Mother Earth bowl is my weekly lunch." — Amanda P., Round Rock
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "My kids actually eat vegetables here! The staff is great about accommodating my daughter's celiac—they use fresh utensils and are super careful." — Rebecca T., Pflugerville
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Finally, a healthy restaurant in Round Rock that takes GF seriously. I've never been glutened here in dozens of visits." — Carlos M., Round Rock
                             </blockquote>
                         </div>
 
@@ -188,6 +218,7 @@
                             <h3>Nearby Restaurants</h3>
                             <ul>
                                 <li><a href="snap-kitchen---cedar-park.html">Snap Kitchen - Cedar Park</a> - Cedar Park</li>
+                                <li><a href="true-food-kitchen---arboretum.html">True Food Kitchen - Arboretum</a> - Arboretum</li>
                             </ul>
                         </div>
 
