--- a/restaurants/ka-prow.html
+++ b/restaurants/ka-prow.html
@@ -141,68 +141,87 @@
                         <div class="section">
                             <h2>About Ka-Prow</h2>
                             <p class="description">Ka-Prow (named after the popular Thai basil stir-fry dish "Pad Kra Pao") is a pan-Asian eatery with a focus on authentic Thai cuisine. The restaurant offers an intimate setting where bold flavors and fresh ingredients come together in dishes that honor Thai culinary traditions.</p>
-                            <p>For gluten-free diners, Thai cuisine offers many naturally GF options, and Ka-Prow is willing to accommodate dietary needs with proper communication.</p>
+                            <p>The name "Ka-Prow" refers to Thai holy basil, the aromatic herb essential to the classic Pad Kra Pao dish. This South Austin gem has built a loyal following among Thai food enthusiasts who appreciate authentic flavors and generous portions.</p>
+                            <p>For gluten-free diners, Thai cuisine offers many naturally GF options built around rice, vegetables, and coconut—and Ka-Prow is willing to accommodate dietary needs with proper communication.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Dining at Ka-Prow</h2>
-                            <p>Ka-Prow offers several GF-friendly options:</p>
+                            <p>Ka-Prow offers several GF-friendly options with some important considerations:</p>
                             <ul class="gf-features">
-                                <li><strong>Rice-Based Dishes:</strong> All rice dishes are naturally GF</li>
-                                <li><strong>Curries:</strong> Most curry bases are GF (confirm sauce ingredients)</li>
+                                <li><strong>Rice-Based Dishes:</strong> All rice dishes—jasmine, sticky, and fried rice—start with naturally GF rice</li>
+                                <li><strong>Curries:</strong> Thai curry pastes are traditionally GF; the coconut milk base is also safe</li>
                                 <li><strong>Stir-Fries:</strong> Can be made with GF soy sauce (tamari) upon request</li>
-                                <li><strong>Fresh Ingredients:</strong> Focus on whole, fresh ingredients</li>
-                                <li><strong>Customizable:</strong> Staff can accommodate modifications</li>
+                                <li><strong>Fresh Ingredients:</strong> Focus on whole, fresh ingredients typical of Thai cooking</li>
+                                <li><strong>Accommodating Staff:</strong> Team is willing to work with dietary restrictions</li>
                             </ul>
-                            <p><strong>Important:</strong> Traditional soy sauce contains wheat. Always request GF soy sauce or tamari substitution, and inform your server about celiac disease.</p>
+                            <p><strong>Critical Note:</strong> Traditional soy sauce contains wheat. Always request GF soy sauce (tamari) as a substitution, and clearly inform your server about celiac disease or gluten allergy. Communication is key at this restaurant.</p>
                         </div>
 
                         <div class="section">
-                            <h2>GF-Friendly Menu Items</h2>
+                            <h2>Recommended GF Menu Items</h2>
                             <ul>
-                                <li><strong>Thai Curries:</strong> Green, red, yellow, and massaman curries (confirm GF)</li>
-                                <li><strong>Pad Thai:</strong> Made with rice noodles (confirm sauce is GF)</li>
-                                <li><strong>Basil Stir-Fry (Ka-Prow):</strong> Classic Thai basil dish with GF soy sauce</li>
-                                <li><strong>Tom Yum Soup:</strong> Hot and sour soup (typically GF)</li>
-                                <li><strong>Steamed Rice:</strong> Plain jasmine rice is always GF</li>
+                                <li><strong>Green Curry:</strong> Coconut curry with bamboo, Thai basil, and your choice of protein</li>
+                                <li><strong>Red Curry:</strong> Rich, aromatic curry with bell peppers and vegetables</li>
+                                <li><strong>Massaman Curry:</strong> Milder curry with potatoes, peanuts, and warm spices</li>
+                                <li><strong>Pad Thai:</strong> Rice noodles with tamarind sauce—confirm all ingredients are GF</li>
+                                <li><strong>Basil Stir-Fry (Ka-Prow):</strong> The namesake dish with holy basil, chilies, and garlic</li>
+                                <li><strong>Tom Yum Soup:</strong> Hot and sour soup with lemongrass and galangal</li>
+                                <li><strong>Tom Kha:</strong> Creamy coconut soup with similar aromatics</li>
+                                <li><strong>Jasmine Rice:</strong> Plain steamed rice is always a safe side</li>
                             </ul>
                         </div>
 
                         <div class="section">
                             <h2>What to Avoid or Confirm</h2>
                             <ul>
-                                <li><strong>Regular soy sauce:</strong> Contains wheat—request GF substitution</li>
-                                <li><strong>Oyster sauce:</strong> Some contain wheat—confirm with kitchen</li>
-                                <li><strong>Fried items:</strong> May be breaded or use shared fryer</li>
-                                <li><strong>Spring rolls:</strong> Wrappers typically contain wheat</li>
+                                <li><strong>Regular soy sauce:</strong> Contains wheat—always request tamari/GF substitution</li>
+                                <li><strong>Oyster sauce:</strong> Some brands contain wheat—confirm with kitchen</li>
+                                <li><strong>Fried items:</strong> May be breaded or cooked in shared fryer oil</li>
+                                <li><strong>Spring rolls:</strong> Wrappers typically contain wheat flour</li>
+                                <li><strong>Wontons/dumplings:</strong> Wheat-based wrappers</li>
+                                <li><strong>Some noodle dishes:</strong> Confirm noodles are rice-based, not wheat</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>Tips for Ordering</h2>
+                            <h2>Tips for Ordering at Ka-Prow</h2>
+                            <p>Maximize your chances of a safe, delicious meal:</p>
                             <ul>
-                                <li>Ask if they have GF soy sauce (tamari) available</li>
-                                <li>Request dishes made with GF soy sauce</li>
-                                <li>Mention celiac disease or gluten allergy clearly</li>
-                                <li>Stick to rice-based dishes for simplest GF options</li>
+                                <li><strong>Call ahead:</strong> Ask if they have tamari/GF soy sauce on hand</li>
+                                <li><strong>Be specific:</strong> Say "celiac disease" or "gluten allergy"—not just "gluten-free preference"</li>
+                                <li><strong>Request clearly:</strong> "Please make this with GF soy sauce only"</li>
+                                <li><strong>Stick to curries:</strong> Curries are often the safest bet—they're coconut-based with minimal sauce additions</li>
+                                <li><strong>Confirm rice noodles:</strong> Make sure noodles are 100% rice</li>
+                                <li><strong>Go off-peak:</strong> Kitchen has more time to accommodate requests during slower periods</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Ka-Prow Experience</h2>
+                            <p>Ka-Prow offers an intimate, cozy setting that feels like a hidden neighborhood gem. The space is small but welcoming, with authentic Thai décor and the aromas of lemongrass, basil, and coconut wafting from the kitchen. It's the kind of place where regulars are greeted by name and newcomers quickly become converts.</p>
+                            <p>Service is friendly and personal—take advantage of this by having a conversation with your server about your dietary needs. The kitchen is generally accommodating when they understand the importance of your request.</p>
                         </div>
 
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "The curries here are amazing and they were happy to use GF soy sauce when I asked. Flavorful and safe!" — Lisa C., Austin
+                                "The curries here are amazing and they were happy to use GF soy sauce when I asked. Flavorful, authentic, and safe!" — Lisa C., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Love this little spot! Just communicate your needs and they'll take care of you." — Brian W., South Austin
+                                "Love this little spot! Just communicate your needs and they'll take care of you. The green curry is my favorite." — Brian W., South Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "I always get the massaman curry here. They know me now and automatically use tamari. Great neighborhood Thai!" — Angela T., Bouldin
                             </blockquote>
                         </div>
 
                         <div class="nearby-restaurants">
                             <h3>Nearby Restaurants</h3>
                             <ul>
-                                <li><a href="thai-fresh.html">Thai Fresh</a> - South Austin (100% GF bakery)</li>
+                                <li><a href="thai-fresh.html">Thai Fresh</a> - South Austin (GF bakery on-site)</li>
                                 <li><a href="bouldin-creek-cafe.html">Bouldin Creek Cafe</a> - South Austin</li>
+                                <li><a href="vinaigrette.html">Vinaigrette</a> - South Austin</li>
                             </ul>
                         </div>
 
