--- a/restaurants/lildoddy-burger-lab.html
+++ b/restaurants/lildoddy-burger-lab.html
@@ -144,60 +144,81 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Lil'Doddy Burger Lab</h2>
-                            <p class="description">Lil'Doddy Burger Lab is Hopdoddy Burger Bar's fast-casual concept, bringing the same quality fresh beef and craft burgers to a quicker, more convenient format. With counter service and a drive-thru option, Lil'Doddy is perfect for when you want a quality burger without the wait of a full-service restaurant.</p>
-                            <p>Like its parent restaurant, Lil'Doddy offers gluten-free buns as a substitution option, making it a great choice for GF diners seeking a satisfying burger experience.</p>
+                            <p class="description">Lil'Doddy Burger Lab is Hopdoddy Burger Bar's fast-casual concept, bringing the same quality fresh-ground beef and craft burger expertise to a quicker, more convenient format. With counter service and a drive-thru option, Lil'Doddy is perfect for when you want a premium burger without the wait (and sometimes lengthy lines) of the full-service Hopdoddy experience.</p>
+                            <p>The "Lab" concept allows Hopdoddy to experiment with new menu items and formats while maintaining their commitment to quality. Fresh beef ground daily, scratch-made sauces, and attention to detail—all in a fraction of the time.</p>
+                            <p>Like its parent restaurant, Lil'Doddy offers gluten-free buns as a substitution option, making it one of the few fast-casual burger joints where GF diners can get a real craft burger experience.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Options</h2>
                             <p>Lil'Doddy accommodates GF diners with the following:</p>
                             <ul class="gf-features">
-                                <li><strong>GF Buns Available:</strong> Substitute a gluten-free bun on any burger</li>
+                                <li><strong>GF Buns Available:</strong> Substitute a quality gluten-free bun on any burger</li>
                                 <li><strong>Lettuce Wrap Option:</strong> Skip the bun entirely for a naturally GF option</li>
                                 <li><strong>Fresh-Ground Beef:</strong> Quality beef that's naturally gluten-free</li>
-                                <li><strong>Salad Options:</strong> Burger salads with GF dressings</li>
+                                <li><strong>Salad Options:</strong> Burger bowls and salads available</li>
+                                <li><strong>Shake Options:</strong> Many shakes are naturally GF (confirm with staff)</li>
                             </ul>
-                            <p><strong>Important:</strong> While GF buns are available, this is a shared kitchen with wheat products. Those with severe celiac should be aware of potential cross-contamination from shared grills and prep surfaces.</p>
+                            <p><strong>Cross-Contamination Note:</strong> While GF buns are available, this is a shared kitchen with wheat products. Burgers are cooked on shared grills and prep surfaces. Those with severe celiac should be aware of potential cross-contamination—this is best for GF diners who can tolerate trace exposure.</p>
                         </div>
 
                         <div class="section">
                             <h2>What to Order</h2>
                             <ul>
-                                <li><strong>Classic Burger + GF Bun:</strong> Fresh-ground beef, lettuce, tomato, pickles</li>
-                                <li><strong>Any Signature Burger + GF Bun:</strong> All burgers can be made with GF bun</li>
-                                <li><strong>Lettuce-Wrapped Burger:</strong> Skip the bun for a naturally GF option</li>
-                                <li><strong>Salads:</strong> Check for GF dressing options</li>
+                                <li><strong>Classic Burger + GF Bun:</strong> Fresh-ground beef, lettuce, tomato, pickles, house sauce</li>
+                                <li><strong>Signature Burgers + GF Bun:</strong> All specialty burgers can be made with GF bun</li>
+                                <li><strong>Lettuce-Wrapped Burger:</strong> Protein-style for the most GF-friendly option</li>
+                                <li><strong>Burger Bowl:</strong> All the toppings over greens without the bun</li>
+                                <li><strong>Shakes:</strong> Premium milkshakes (confirm GF status of specific flavors)</li>
                             </ul>
                         </div>
 
                         <div class="section">
                             <h2>What to Avoid</h2>
                             <ul>
-                                <li><strong>Regular buns:</strong> Contain gluten</li>
-                                <li><strong>Some sauces:</strong> May contain wheat-based thickeners—confirm with staff</li>
-                                <li><strong>Breaded items:</strong> Any breaded toppings or sides</li>
+                                <li><strong>Regular buns:</strong> Standard buns contain gluten</li>
+                                <li><strong>Some sauces:</strong> A few specialty sauces may contain wheat-based thickeners</li>
+                                <li><strong>Breaded items:</strong> Any breaded toppings like fried onion strings</li>
+                                <li><strong>Fries (potentially):</strong> Ask about shared fryer situation</li>
+                            </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Tips for Ordering GF</h2>
+                            <p>Get the best experience at Lil'Doddy:</p>
+                            <ul>
+                                <li><strong>Say "GF bun" clearly:</strong> Make sure they note it on your order</li>
+                                <li><strong>Ask about sauces:</strong> Confirm which house sauces are GF</li>
+                                <li><strong>Consider lettuce wrap:</strong> Most reliable option for severe sensitivity</li>
+                                <li><strong>Use the drive-thru:</strong> Same quality, super convenient</li>
+                                <li><strong>Go off-peak:</strong> Kitchen has more attention for special requests during slower times</li>
                             </ul>
                         </div>
 
                         <div class="section">
                             <h2>The Lil'Doddy Experience</h2>
-                            <p>Unlike the sit-down Hopdoddy Burger Bar experience, Lil'Doddy offers quick counter service and a convenient drive-thru. Order at the counter, grab your number, and your fresh-made burger will be brought to you. The drive-thru makes it especially convenient for a quick GF meal on the go.</p>
+                            <p>Unlike the sit-down Hopdoddy Burger Bar experience with its full bar and longer waits, Lil'Doddy is built for speed and convenience. Order at the counter, grab your number, and your fresh-made burger arrives quickly at your table. The drive-thru option is a game-changer for GF diners who want a quality burger without leaving their car.</p>
+                            <p>The Oak Hill location on William Cannon serves the southwest Austin area, providing an accessible option for families and commuters in the area. The atmosphere is casual and modern—perfect for a quick lunch, dinner on the go, or feeding hungry kids after practice.</p>
+                            <p>Best of all, you're getting Hopdoddy quality without the South Congress lines and wait times. For GF diners who've been missing good craft burgers, Lil'Doddy fills that void nicely.</p>
                         </div>
 
                         <div class="section">
                             <h2>Related Restaurants</h2>
                             <ul>
-                                <li><a href="hopdoddy-burger-bar---south-congress.html">Hopdoddy Burger Bar - South Congress</a> (Full-service)</li>
+                                <li><a href="hopdoddy-burger-bar---south-congress.html">Hopdoddy Burger Bar - South Congress</a> (Full-service, craft cocktails)</li>
                             </ul>
                         </div>
 
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "The drive-thru is so convenient! The GF bun is actually good—not cardboard like some places." — Kelly M., Austin
+                                "The drive-thru is so convenient! The GF bun is actually good—not cardboard like some places. Finally a real burger!" — Kelly M., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Same quality Hopdoddy burgers but faster. Love having a GF bun option for quick meals." — Chris T., Oak Hill
+                                "Same quality Hopdoddy burgers but faster and no long wait. Love having a GF bun option for quick meals." — Chris T., Oak Hill
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "My kids love Lil'Doddy and I love that I can get a GF burger through the drive-thru. Busy mom win!" — Amanda R., South Austin
                             </blockquote>
                         </div>
 
