--- a/restaurants/picnik---burnet-road.html
+++ b/restaurants/picnik---burnet-road.html
@@ -144,37 +144,59 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Picnik - Burnet Road</h2>
-                            <p class="description">Picnik is one of Austin's most beloved 100% gluten-free restaurants, founded on the principles of clean eating, paleo nutrition, and functional foods. The Burnet Road location is the original Picnik, where founder Naomi Seifter built a loyal following with her butter coffee and wholesome, grain-free meals.</p>
-                            <p>For celiac diners, Picnik represents the gold standard: a <strong>completely gluten-free kitchen</strong> where you can order anything on the menu without worry. No cross-contamination, no need to ask questions—just safe, delicious food.</p>
+                            <p class="description">Picnik is one of Austin's most beloved 100% gluten-free restaurants, founded on the principles of clean eating, paleo nutrition, and functional foods. The Burnet Road location (also known as the Lamar location, at 6607 N Lamar Blvd) is the original Picnik, where founder Naomi Seifter built a loyal following with her butter coffee and wholesome, grain-free meals.</p>
+                            <p>For celiac diners, Picnik represents the gold standard: a <strong>completely gluten-free kitchen</strong> where you can order anything on the menu without worry. No cross-contamination, no need to ask questions—just safe, delicious food. This is what dining out should feel like for everyone.</p>
+                            <p>Picnik's philosophy goes beyond just avoiding gluten. They focus on nutrient-dense, anti-inflammatory foods that actually make you feel good. Everything is made from scratch with high-quality ingredients: grass-fed meats, organic vegetables, healthy fats, and no refined sugars or seed oils.</p>
                         </div>
 
                         <div class="section">
                             <h2>Why Picnik is Perfect for Celiacs</h2>
                             <p>Picnik offers complete peace of mind for gluten-free diners:</p>
                             <ul class="gf-features">
-                                <li><strong>100% Gluten-Free Kitchen:</strong> No gluten ingredients in the building—zero cross-contamination risk</li>
-                                <li><strong>Paleo Focus:</strong> Grain-free cooking naturally eliminates gluten</li>
+                                <li><strong>100% Gluten-Free Kitchen:</strong> No gluten ingredients ever enter the building—zero cross-contamination risk</li>
+                                <li><strong>Grain-Free Menu:</strong> Paleo-focused cooking naturally eliminates all grains, not just gluten</li>
                                 <li><strong>Clean Ingredients:</strong> No refined sugars, seed oils, or processed foods</li>
-                                <li><strong>Celiac-Founded:</strong> Created with gluten-sensitive diners in mind</li>
-                                <li><strong>Everything is Safe:</strong> Order anything on the menu without asking</li>
+                                <li><strong>Celiac-Founded:</strong> Created by people who understand gluten sensitivity</li>
+                                <li><strong>Order Anything:</strong> Every single item on the menu is safe—no need to ask questions</li>
+                                <li><strong>No Anxiety:</strong> The peace of mind alone is worth the visit</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>Signature Items</h2>
+                            <h2>Signature Menu Items</h2>
                             <ul>
-                                <li><strong>Butter Coffee:</strong> Their famous grass-fed butter and MCT oil blended coffee—naturally GF</li>
-                                <li><strong>Bone Broth:</strong> Slow-simmered, nutrient-rich bone broth</li>
-                                <li><strong>Breakfast Bowls:</strong> Eggs, proteins, and vegetables with paleo-friendly sauces</li>
-                                <li><strong>Grass-Fed Burgers:</strong> Served on lettuce or with paleo buns</li>
-                                <li><strong>Salads and Bowls:</strong> Fresh, whole-food based meals</li>
-                                <li><strong>Keto Treats:</strong> Desserts made without sugar or grains</li>
+                                <li><strong>Butter Coffee:</strong> Their famous grass-fed butter and MCT oil blended coffee—creamy, satisfying, and naturally GF</li>
+                                <li><strong>Bone Broth:</strong> Slow-simmered for 24+ hours, rich in collagen and nutrients</li>
+                                <li><strong>Breakfast Bowls:</strong> Eggs, proteins, and vegetables with paleo-friendly sauces and avocado</li>
+                                <li><strong>Grass-Fed Burgers:</strong> Premium beef served on lettuce wraps or with their grain-free bun</li>
+                                <li><strong>Grain Bowls:</strong> Built on cauliflower rice with proteins and vegetables</li>
+                                <li><strong>Salads:</strong> Fresh, seasonal salads with house-made dressings</li>
+                                <li><strong>Keto Treats:</strong> Desserts made without sugar or grains—chocolate avocado pudding, fat bombs, and more</li>
+                                <li><strong>Smoothies:</strong> Nutrient-packed smoothies with collagen, MCT oil, and superfoods</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Tips for First-Time Visitors</h2>
+                            <ul>
+                                <li><strong>Try the Butter Coffee:</strong> Even if you're skeptical, it's worth experiencing their signature drink</li>
+                                <li><strong>Go for Breakfast:</strong> Their breakfast bowls are legendary in the Austin GF community</li>
+                                <li><strong>Ask About Specials:</strong> Seasonal items rotate and are always worth trying</li>
+                                <li><strong>Save Room for Dessert:</strong> Their keto treats prove you don't need sugar for satisfaction</li>
+                                <li><strong>Relax:</strong> For once, you don't have to interrogate the staff—just order and enjoy</li>
+                            </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Picnik Experience</h2>
+                            <p>The Burnet/Lamar location has a casual, health-focused vibe with counter service. The space is bright and welcoming, decorated with natural materials and plants that reflect the brand's wellness philosophy. You'll see a mix of remote workers on laptops, fitness enthusiasts grabbing post-workout meals, and families enjoying a healthy brunch.</p>
+                            <p>What makes Picnik special beyond the food is the community. Many celiac diners consider Picnik their "safe space"—a place where they can eat without fear for the first time in years. The staff understands the importance of what they're providing, and that care shows in everything they do.</p>
+                            <p>Pro tip: Parking can be tight during peak hours (weekend brunch especially). Consider going slightly off-peak or using the app for pickup.</p>
                         </div>
 
                         <div class="section">
                             <h2>Other Picnik Locations</h2>
-                            <p>Picnik has multiple Austin locations:</p>
+                            <p>Picnik has multiple Austin locations, all 100% gluten-free:</p>
                             <ul>
                                 <li><a href="picnik---barton-springs.html">Picnik - Barton Springs</a> (Downtown Austin)</li>
                             </ul>
@@ -183,10 +205,13 @@
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "As a celiac, Picnik is my safe haven. I can eat ANYTHING on the menu. The peace of mind is priceless." — Sarah T., Austin
+                                "As a celiac, Picnik is my safe haven. I can eat ANYTHING on the menu. The peace of mind is priceless. I literally cried my first visit." — Sarah T., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Best gluten-free breakfast in Austin, hands down. The butter coffee is life-changing!" — Mike R., Round Rock
+                                "Best gluten-free breakfast in Austin, hands down. The butter coffee is life-changing! This is what every GF restaurant should aspire to be." — Mike R., Round Rock
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "I bring all my out-of-town celiac friends here. It's THE Austin GF experience. The food is incredible and you never have to worry." — Jennifer K., Austin
                             </blockquote>
                         </div>
 
@@ -195,6 +220,7 @@
                             <ul>
                                 <li><a href="flower-child---domain.html">Flower Child - Domain</a> - The Domain</li>
                                 <li><a href="true-food-kitchen---arboretum.html">True Food Kitchen - Arboretum</a> - Arboretum</li>
+                                <li><a href="the-steeping-room.html">The Steeping Room</a> - North Austin</li>
                             </ul>
                         </div>
 
