--- a/restaurants/snap-kitchen---cedar-park.html
+++ b/restaurants/snap-kitchen---cedar-park.html
@@ -142,30 +142,52 @@
                         <div class="section">
                             <h2>About Snap Kitchen - Cedar Park</h2>
                             <p class="description">Snap Kitchen brings its popular healthy grab-and-go concept to Cedar Park, offering residents north of Austin convenient access to nutritionist-designed, pre-made meals. Perfect for busy families, fitness enthusiasts, and anyone seeking healthy food options without the cooking time.</p>
-                            <p>Every meal is ready to eat or heat, with full nutritional information and dietary labels making it easy to find gluten-free options quickly.</p>
+                            <p>Founded in Austin in 2010, Snap Kitchen pioneered the ready-to-eat healthy meal concept before it became mainstream. The Cedar Park location serves the growing suburban communities north of Austin, providing the same commitment to clean eating and dietary accommodation that made the brand a local favorite.</p>
+                            <p>Every meal is ready to eat or heat, with full nutritional information and dietary labels making it easy to find gluten-free options quickly. The refrigerated cases are organized by dietary preference, so you can easily find GF, keto, paleo, and vegetarian options without hunting through every label.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Dining at Snap Kitchen</h2>
-                            <p>Snap Kitchen makes GF eating easy:</p>
+                            <p>Snap Kitchen makes GF eating easy with their comprehensive labeling system:</p>
                             <ul class="gf-features">
-                                <li><strong>Clearly Labeled:</strong> Every meal is labeled with dietary information including GF status</li>
-                                <li><strong>Extensive Selection:</strong> Many meals are naturally gluten-free</li>
-                                <li><strong>Nutritional Info:</strong> Full ingredient lists and nutritional information on every package</li>
-                                <li><strong>Keto/Paleo Options:</strong> Many specialty meals are also GF</li>
-                                <li><strong>Online Ordering:</strong> Filter by dietary preference when ordering online</li>
+                                <li><strong>Clearly Labeled:</strong> Every meal displays dietary information including GF status with easy-to-read icons</li>
+                                <li><strong>Extensive Selection:</strong> Typically 15-20 gluten-free options available at any time</li>
+                                <li><strong>Nutritional Info:</strong> Full ingredient lists, macros, and nutritional information on every package</li>
+                                <li><strong>Keto/Paleo Options:</strong> Many specialty diet meals are naturally grain-free and GF</li>
+                                <li><strong>Online Ordering:</strong> Filter by dietary preference when ordering through their app or website</li>
+                                <li><strong>Subscription Plans:</strong> Weekly meal plans available with GF-only selections</li>
                             </ul>
+                            <p><strong>Important Note:</strong> While Snap Kitchen clearly labels GF meals, they do prepare meals with gluten-containing ingredients in their central kitchen. Meals are packaged separately, but those with severe celiac should be aware of this shared facility.</p>
                         </div>
 
                         <div class="section">
                             <h2>Popular GF Meal Categories</h2>
                             <ul>
-                                <li><strong>Protein Bowls:</strong> Grilled proteins with vegetables and grains</li>
-                                <li><strong>Breakfast:</strong> Egg-based dishes, overnight oats (verify GF)</li>
-                                <li><strong>Salads:</strong> Fresh salads with house-made dressings</li>
-                                <li><strong>Keto Meals:</strong> Low-carb, often naturally GF</li>
-                                <li><strong>Paleo Meals:</strong> Grain-free and typically GF</li>
+                                <li><strong>Protein Bowls:</strong> Grilled chicken, salmon, or steak with roasted vegetables and cauliflower rice</li>
+                                <li><strong>Breakfast:</strong> Egg white frittatas, turkey sausage scrambles, and veggie-packed egg cups</li>
+                                <li><strong>Salads:</strong> Southwest chicken, Asian sesame, and Mediterranean bowls with GF dressings</li>
+                                <li><strong>Keto Meals:</strong> Bacon-wrapped chicken, bunless burger bowls, and zucchini noodle dishes</li>
+                                <li><strong>Paleo Meals:</strong> Grain-free options featuring whole proteins and vegetable sides</li>
+                                <li><strong>Snacks:</strong> Hard-boiled eggs, veggie packs, and protein bites (check labels)</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Tips for Shopping at Snap Kitchen</h2>
+                            <p>Make the most of your Snap Kitchen visit with these tips:</p>
+                            <ul>
+                                <li><strong>Check the App:</strong> See what's in stock before you visit to avoid disappointment</li>
+                                <li><strong>Go Early:</strong> Best selection is typically in the morning after fresh deliveries</li>
+                                <li><strong>Look for Weekly Specials:</strong> Rotating menu items keep things interesting</li>
+                                <li><strong>Buy in Bulk:</strong> Stock up on favorites for the week—they last 5-7 days refrigerated</li>
+                                <li><strong>Ask About New Items:</strong> Staff can tell you about upcoming menu additions</li>
+                            </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Cedar Park Experience</h2>
+                            <p>The Cedar Park location offers a clean, modern retail space designed for quick grab-and-go shopping. Walk in, browse the refrigerated cases, grab your meals, and check out in minutes. There's no seating for dining in, but the parking is convenient and the staff is helpful if you have questions about ingredients or recommendations.</p>
+                            <p>Many Cedar Park residents use Snap Kitchen as their weekly meal prep solution, stopping by on Sundays to stock up on lunches for the work week. It's become a go-to for health-conscious families who want nutritious meals without the cooking time.</p>
                         </div>
 
                         <div class="section">
@@ -179,7 +201,13 @@
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "So convenient to have healthy GF options close to home in Cedar Park. I grab meals for the whole week!" — Laura M., Cedar Park
+                                "So convenient to have healthy GF options close to home in Cedar Park. I grab meals for the whole week and feel good about what I'm eating!" — Laura M., Cedar Park
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "The labeling makes it so easy to find GF meals. I don't have to read every ingredient list—just look for the GF icon. Game changer for busy weeknights." — David K., Leander
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "My whole family eats Snap Kitchen now. The kids love the protein bowls and I love that they're actually eating vegetables!" — Jennifer T., Cedar Park
                             </blockquote>
                         </div>
 
@@ -187,6 +215,7 @@
                             <h3>Nearby Restaurants</h3>
                             <ul>
                                 <li><a href="flower-child---round-rock.html">Flower Child - Round Rock</a> - Round Rock</li>
+                                <li><a href="true-food-kitchen---arboretum.html">True Food Kitchen - Arboretum</a> - Arboretum</li>
                             </ul>
                         </div>
 
