--- a/restaurants/snap-kitchen---downtown.html
+++ b/restaurants/snap-kitchen---downtown.html
@@ -143,44 +143,54 @@
                 <div class="detail-grid">
                     <div class="main-content">
                         <div class="section">
-                            <h2>About Snap Kitchen</h2>
-                            <p class="description">Snap Kitchen revolutionized healthy eating in Austin with its grab-and-go concept of pre-made, nutritionist-designed meals. Founded in Austin, Snap Kitchen has become a go-to for busy professionals, fitness enthusiasts, and anyone seeking convenient, healthy food options.</p>
-                            <p>The Downtown location on Congress Avenue serves the Capitol area and downtown workers with quick access to refrigerated cases full of ready-to-eat meals, perfect for those who need healthy food fast without sacrificing nutritional quality.</p>
+                            <h2>About Snap Kitchen - Downtown</h2>
+                            <p class="description">Snap Kitchen revolutionized healthy eating in Austin with its grab-and-go concept of pre-made, nutritionist-designed meals. Founded right here in Austin in 2010, Snap Kitchen pioneered the ready-to-eat healthy meal category before it became mainstream.</p>
+                            <p>The Downtown location on Congress Avenue is perfectly positioned for the Capitol area, serving busy professionals, state workers, and downtown residents who need healthy food fast without sacrificing nutritional quality. Walk in, grab a meal from the refrigerated cases, and you're out the door in minutes with a nutritionist-designed lunch.</p>
+                            <p>For GF diners, Snap Kitchen's transparent labeling system makes finding safe meals incredibly easy—no need to interrogate anyone or read every ingredient list.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Dining at Snap Kitchen</h2>
-                            <p>Snap Kitchen makes GF eating easy:</p>
+                            <p>Snap Kitchen makes GF eating easy with clear labeling:</p>
                             <ul class="gf-features">
-                                <li><strong>Clearly Labeled:</strong> Every meal is labeled with dietary information including GF status</li>
-                                <li><strong>Extensive Selection:</strong> Many meals are naturally gluten-free or designed to be GF</li>
-                                <li><strong>Nutritional Info:</strong> Full ingredient lists and nutritional information on every package</li>
-                                <li><strong>Keto/Paleo Options:</strong> Many of these specialty meals are also GF</li>
-                                <li><strong>Online Ordering:</strong> Filter by dietary preference when ordering online</li>
+                                <li><strong>Clearly Labeled:</strong> Every meal displays GF status with easy-to-spot icons</li>
+                                <li><strong>Extensive Selection:</strong> Typically 15-20 GF options available at any time</li>
+                                <li><strong>Nutritional Info:</strong> Full ingredient lists, macros, and allergen information on every package</li>
+                                <li><strong>Keto/Paleo Options:</strong> Many specialty diet meals are naturally GF</li>
+                                <li><strong>App Filtering:</strong> Filter for GF options when ordering online or through the app</li>
+                                <li><strong>Meal Subscriptions:</strong> Weekly plans with GF preferences saved</li>
                             </ul>
-                            <p><strong>Note:</strong> While meals are prepared with care, they are made in a shared kitchen. Those with severe allergies should review ingredient lists carefully.</p>
+                            <p><strong>Shared Kitchen Note:</strong> Meals are prepared in a central kitchen that also handles gluten-containing ingredients. While meals are packaged separately, those with severe celiac should be aware of this shared facility arrangement.</p>
                         </div>
 
                         <div class="section">
                             <h2>How It Works</h2>
                             <ul>
-                                <li><strong>Walk In:</strong> Browse refrigerated cases of pre-made meals</li>
-                                <li><strong>Check Labels:</strong> Each meal clearly shows GF, keto, paleo, and other dietary markers</li>
-                                <li><strong>Grab and Go:</strong> Purchase and eat immediately or heat at home/office</li>
-                                <li><strong>Order Online:</strong> Order ahead for pickup or delivery</li>
-                                <li><strong>Meal Plans:</strong> Subscribe for regular healthy meal delivery</li>
+                                <li><strong>Walk In:</strong> Browse refrigerated cases organized by meal type and dietary preference</li>
+                                <li><strong>Check Labels:</strong> Each meal clearly shows GF, keto, paleo, and other markers</li>
+                                <li><strong>Grab and Go:</strong> Purchase and eat cold, or heat in the office microwave</li>
+                                <li><strong>Order Online:</strong> Check stock and order ahead through the app</li>
+                                <li><strong>Meal Plans:</strong> Subscribe for regular delivery or pickup</li>
                             </ul>
                         </div>
 
                         <div class="section">
                             <h2>Popular GF Meal Categories</h2>
                             <ul>
-                                <li><strong>Protein Bowls:</strong> Grilled proteins with vegetables and grains</li>
-                                <li><strong>Breakfast:</strong> Egg-based dishes, overnight oats (verify GF)</li>
-                                <li><strong>Salads:</strong> Fresh salads with house-made dressings</li>
-                                <li><strong>Keto Meals:</strong> Low-carb, often naturally GF</li>
-                                <li><strong>Paleo Meals:</strong> Grain-free and typically GF</li>
+                                <li><strong>Protein Bowls:</strong> Grilled chicken, salmon, or steak with vegetables and cauliflower rice</li>
+                                <li><strong>Breakfast:</strong> Egg white frittatas, turkey sausage scrambles, and protein-packed egg cups</li>
+                                <li><strong>Fresh Salads:</strong> Southwest chicken, Asian sesame, Mediterranean, and seasonal options</li>
+                                <li><strong>Keto Meals:</strong> Low-carb options that are naturally grain-free</li>
+                                <li><strong>Paleo Meals:</strong> Grain-free options with whole proteins and vegetables</li>
+                                <li><strong>Snacks:</strong> Hard-boiled eggs, protein bites, and veggie cups</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Downtown Experience</h2>
+                            <p>The Congress Avenue location is designed for speed and convenience—exactly what downtown workers need. The clean, modern retail space features well-organized refrigerated cases where you can quickly spot GF options. No seating for dining in, but that's by design: grab your meal and go.</p>
+                            <p>Peak lunch hours (11:30am-1pm) can see lines, but they move quickly. Morning visits after fresh deliveries offer the best selection. Many downtown workers make Snap Kitchen their weekly routine, stocking up on lunches to keep at the office.</p>
+                            <p><strong>Pro tip:</strong> Use the app to check what's in stock before you walk over—saves time and disappointment if your favorite is sold out.</p>
                         </div>
 
                         <div class="section">
@@ -194,18 +204,22 @@
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "A lifesaver for my busy work schedule! The GF labels make it so easy to find safe meals quickly." — Rachel K., Austin
+                                "A lifesaver for my busy work schedule! The GF labels make it so easy to find safe meals quickly. I'm in and out in 3 minutes." — Rachel K., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "I love that I can grab a healthy, GF lunch in under 5 minutes. The meals are actually tasty too!" — James P., Austin
+                                "I love that I can grab a healthy, GF lunch in under 5 minutes. The meals are actually tasty and keep me full all afternoon!" — James P., Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Best lunch option for downtown workers who are GF. The labeling is clear and the protein bowls are legit." — Michelle T., Capitol Area
                             </blockquote>
                         </div>
 
                         <div class="nearby-restaurants">
                             <h3>Nearby Restaurants</h3>
                             <ul>
+                                <li><a href="the-well---congress.html">The Well - Congress</a> - Downtown (100% GF)</li>
                                 <li><a href="red-ash.html">Red Ash</a> - Downtown Austin</li>
-                                <li><a href="picnik---barton-springs.html">Picnik - Barton Springs</a> - Downtown</li>
+                                <li><a href="picnik---barton-springs.html">Picnik - Barton Springs</a> - Downtown (100% GF)</li>
                             </ul>
                         </div>
 
