--- a/restaurants/snap-kitchen---west-lake-hills.html
+++ b/restaurants/snap-kitchen---west-lake-hills.html
@@ -142,30 +142,52 @@
                         <div class="section">
                             <h2>About Snap Kitchen - West Lake Hills</h2>
                             <p class="description">Snap Kitchen serves the West Lake Hills community with its popular healthy grab-and-go concept. Offering nutritionist-designed, pre-made meals that are ready to eat or heat, this location is perfect for busy West Austin residents seeking healthy food options without sacrificing convenience.</p>
-                            <p>Every meal comes with full nutritional information and dietary labels, making it easy to find gluten-free options at a glance.</p>
+                            <p>The West Lake Hills location caters to an affluent, health-conscious clientele who value quality ingredients and transparent nutrition information. Whether you're a busy professional, a parent managing kids' schedules, or a fitness enthusiast tracking macros, Snap Kitchen provides restaurant-quality meals you can eat at home in minutes.</p>
+                            <p>Every meal comes with full nutritional information and dietary labels, making it easy to find gluten-free options at a glance. The refrigerated cases are thoughtfully organized by dietary preference, so GF shoppers can quickly locate safe options.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Dining at Snap Kitchen</h2>
-                            <p>Snap Kitchen makes GF eating easy:</p>
+                            <p>Snap Kitchen makes GF eating easy with their transparent labeling:</p>
                             <ul class="gf-features">
-                                <li><strong>Clearly Labeled:</strong> Every meal is labeled with dietary information including GF status</li>
-                                <li><strong>Extensive Selection:</strong> Many meals are naturally gluten-free</li>
-                                <li><strong>Nutritional Info:</strong> Full ingredient lists and nutritional information on every package</li>
-                                <li><strong>Keto/Paleo Options:</strong> Many specialty meals are also GF</li>
-                                <li><strong>Online Ordering:</strong> Filter by dietary preference when ordering online</li>
+                                <li><strong>Clearly Labeled:</strong> Every meal displays dietary information including GF status with easy-to-spot icons</li>
+                                <li><strong>Extensive Selection:</strong> Typically 15-20 gluten-free options available daily</li>
+                                <li><strong>Nutritional Info:</strong> Full ingredient lists, macros, calories, and allergen information on every package</li>
+                                <li><strong>Keto/Paleo Options:</strong> Many specialty diet meals are naturally grain-free and GF</li>
+                                <li><strong>Online Ordering:</strong> Filter by dietary preference when ordering through their app or website</li>
+                                <li><strong>Meal Subscriptions:</strong> Set up weekly deliveries with GF-only preferences</li>
                             </ul>
+                            <p><strong>Cross-Contamination Note:</strong> Snap Kitchen prepares all meals in a central kitchen that also handles gluten-containing ingredients. Meals are packaged separately, but those with severe celiac disease should be aware of this shared facility arrangement.</p>
                         </div>
 
                         <div class="section">
                             <h2>Popular GF Meal Categories</h2>
                             <ul>
-                                <li><strong>Protein Bowls:</strong> Grilled proteins with vegetables and grains</li>
-                                <li><strong>Breakfast:</strong> Egg-based dishes, overnight oats (verify GF)</li>
-                                <li><strong>Salads:</strong> Fresh salads with house-made dressings</li>
-                                <li><strong>Keto Meals:</strong> Low-carb, often naturally GF</li>
-                                <li><strong>Paleo Meals:</strong> Grain-free and typically GF</li>
+                                <li><strong>Protein Bowls:</strong> Grilled salmon, chicken, or grass-fed beef with seasonal vegetables and cauliflower rice</li>
+                                <li><strong>Breakfast:</strong> Egg white frittatas, turkey sausage scrambles, and protein-packed egg cups</li>
+                                <li><strong>Fresh Salads:</strong> Southwest chicken, Asian sesame, Greek, and seasonal specialty salads</li>
+                                <li><strong>Keto Meals:</strong> Bacon-wrapped proteins, bunless burger bowls, and low-carb vegetable dishes</li>
+                                <li><strong>Paleo Meals:</strong> Grain-free options with whole proteins and roasted vegetables</li>
+                                <li><strong>Healthy Snacks:</strong> Hard-boiled eggs, veggie cups with hummus, and protein bites</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Tips for West Lake Hills Location</h2>
+                            <p>Get the most out of your Snap Kitchen visits:</p>
+                            <ul>
+                                <li><strong>Use the App:</strong> Check inventory before visiting to ensure your favorites are in stock</li>
+                                <li><strong>Morning is Best:</strong> Fresh deliveries arrive early, so morning offers the best selection</li>
+                                <li><strong>Weekly Rotation:</strong> Menu items rotate weekly, so check for new additions</li>
+                                <li><strong>Stock Up:</strong> Meals stay fresh 5-7 days refrigerated—grab enough for the week</li>
+                                <li><strong>Combine with The Well:</strong> The Well Westlake is nearby for sit-down 100% GF dining</li>
+                            </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>The West Lake Hills Experience</h2>
+                            <p>The West Lake Hills Snap Kitchen offers a clean, modern retail space in the Bee Cave Road corridor. The location is designed for efficiency—walk in, browse the refrigerated displays, grab your meals, and check out quickly. There's no seating for dining in, but the convenient parking makes quick stops easy.</p>
+                            <p>This location attracts a mix of busy professionals stopping by on their way home from work, parents grabbing healthy options for the family, and fitness-focused residents who appreciate the detailed macro information on every meal. Staff members are knowledgeable about ingredients and can help you find options that fit your dietary needs.</p>
                         </div>
 
                         <div class="section">
@@ -181,13 +203,19 @@
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
                                 "The convenience can't be beat. I grab GF meals here for the week and feel great knowing exactly what I'm eating." — Christine H., Westlake
                             </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "As someone tracking macros, I love that every meal has complete nutrition info. The GF protein bowls are my go-to post-workout meal." — Ryan M., West Lake Hills
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Perfect for busy weeknights. My kids actually eat these meals without complaining, and I don't have to cook. Win-win!" — Sarah L., Bee Cave
+                            </blockquote>
                         </div>
 
                         <div class="nearby-restaurants">
                             <h3>Nearby Restaurants</h3>
                             <ul>
+                                <li><a href="the-well---westlake.html">The Well - Westlake</a> - Westlake (100% GF)</li>
                                 <li><a href="true-food-kitchen---arboretum.html">True Food Kitchen - Arboretum</a> - Arboretum</li>
-                                <li><a href="the-well---westlake.html">The Well - Westlake</a> - Westlake</li>
                             </ul>
                         </div>
 
