--- a/restaurants/thai-fresh.html
+++ b/restaurants/thai-fresh.html
@@ -154,32 +154,73 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Thai Fresh</h2>
-                            <p class="description">Thai Fresh is a beloved South Austin institution serving authentic Thai cuisine with extensive gluten-free options. What sets them apart is their in-house gluten-free bakery, offering a full range of sweet treats and desserts that are completely safe for those with celiac disease and gluten sensitivities.</p>
+                            <p class="description">Thai Fresh is a beloved South Austin institution serving authentic Thai cuisine with extensive gluten-free options. What truly sets them apart is their in-house gluten-free bakery, offering a full range of sweet treats and desserts that are completely safe for those with celiac disease and gluten sensitivities.</p>
+                            <p>Founded by Jam Sanitchat, Thai Fresh has been serving the Bouldin neighborhood since 2008. Jam's commitment to accommodating dietary restrictions comes from a genuine desire to make delicious food accessible to everyone. The gluten-free bakery was added specifically to give celiac diners the rare opportunity to enjoy dessert after their meal.</p>
+                            <p>The restaurant operates as both a café/bakery during the day and a full-service Thai restaurant in the evening, making it a neighborhood gathering spot from morning to night.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Information</h2>
-                            <p>Thai Fresh takes gluten-free dining seriously, with careful preparation practices and dedicated kitchen areas for their gluten-free bakery items. Staff are well-trained in celiac requirements and can guide you through the menu. Their Thai dishes use tamari instead of regular soy sauce, and they clearly mark all gluten-free options on their menu.</p>
+                            <p>Thai Fresh takes gluten-free dining seriously with multiple accommodations:</p>
                             <ul class="gf-features">
-                                <li>Dedicated GF Bakery</li><li>Celiac Aware Staff</li><li>Tamari Available</li><li>GF Menu Marking</li>
+                                <li><strong>Dedicated GF Bakery:</strong> In-house bakery produces cakes, cookies, and pastries in a dedicated GF area</li>
+                                <li><strong>Tamari Available:</strong> GF soy sauce (tamari) used for all GF orders</li>
+                                <li><strong>Celiac-Trained Staff:</strong> Team understands cross-contamination and celiac requirements</li>
+                                <li><strong>Menu Marking:</strong> GF items clearly marked on the menu</li>
+                                <li><strong>Separate Prep:</strong> GF dishes prepared with dedicated utensils when requested</li>
+                            </ul>
+                            <p><strong>Note:</strong> While Thai Fresh has excellent GF protocols, this is not an entirely dedicated GF kitchen. The bakery area is separate, but the main kitchen prepares both GF and regular dishes. Always inform your server about celiac disease for the safest experience.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular GF Menu Items</h2>
+                            <ul>
+                                <li><strong>Pad Thai (GF):</strong> Classic rice noodles with choice of protein, made with tamari</li>
+                                <li><strong>Green Curry (GF):</strong> Aromatic coconut curry with vegetables and your choice of protein</li>
+                                <li><strong>Tom Kha Soup (GF):</strong> Creamy coconut soup with galangal, lemongrass, and mushrooms</li>
+                                <li><strong>Fresh Spring Rolls (GF):</strong> Rice paper rolls with vegetables and peanut sauce</li>
+                                <li><strong>Papaya Salad (GF):</strong> Traditional som tam with fish sauce (verify GF)</li>
+                                <li><strong>Basil Fried Rice (GF):</strong> Fragrant rice with Thai basil and vegetables</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>Popular Menu Items</h2>
-                            <p>Thai Fresh is known for their authentic Pad Thai, Green Curry, and Tom Kha soup - all available gluten-free. Their bakery is famous for gluten-free cakes, cookies, and pastries. The vegan ice cream is also a hit. Don't miss their Thai iced tea and fresh spring rolls as starters.</p>
+                            <h2>The GF Bakery</h2>
+                            <p>Thai Fresh's gluten-free bakery is a rare gem in Austin. They offer:</p>
+                            <ul>
+                                <li><strong>GF Cakes:</strong> Full-sized cakes and slices for special occasions</li>
+                                <li><strong>GF Cookies:</strong> Rotating selection of fresh-baked cookies</li>
+                                <li><strong>GF Pastries:</strong> Various sweet treats and baked goods</li>
+                                <li><strong>Vegan Ice Cream:</strong> House-made vegan ice cream (many flavors GF)</li>
+                                <li><strong>Custom Orders:</strong> They can create custom GF cakes for events</li>
+                            </ul>
+                            <p>For celiacs who've gone years without safe bakery treats, this is a special place. Save room for dessert!</p>
                         </div>
 
                         <div class="section">
-                            <h2>Location & Atmosphere</h2>
-                            <p>Located in the heart of the Bouldin neighborhood in South Austin, Thai Fresh offers a casual, welcoming atmosphere with both indoor and outdoor seating. The space doubles as a café and bakery during the day and a full-service restaurant in the evening. It's a favorite spot for families, date nights, and anyone craving authentic Thai flavors.</p>
+                            <h2>The Thai Fresh Experience</h2>
+                            <p>Located on Mary Street in the Bouldin neighborhood, Thai Fresh has a laid-back Austin vibe. The space is casual and colorful, with both indoor seating and a pleasant outdoor patio. During the day, it operates as a café with the bakery case displaying fresh-made treats. In the evening, it transforms into a full dinner service.</p>
+                            <p>The restaurant attracts a neighborhood crowd—families, couples on dates, and groups of friends enjoying Thai food and conversation. The atmosphere is relaxed and welcoming, with servers who take time to explain the menu and accommodate dietary needs.</p>
+                            <p>Pro tip: Weekend evenings can get busy. Either make a reservation or go early to avoid a wait.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Community Reviews</h2>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "The GF bakery is a game-changer. I actually got to order DESSERT at a restaurant for the first time in years. And the Thai food is incredible too!" — Michelle K., Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Best GF Pad Thai in Austin. They use tamari and are really careful about preparation. My celiac daughter loves this place." — David R., Bouldin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "I ordered a custom GF birthday cake here and it was amazing. No one could tell it was gluten-free!" — Sara T., South Austin
+                            </blockquote>
                         </div>
 
                         <div class="related-restaurants">
                             <h3>Similar Restaurants</h3>
                             <ul>
-                                <li><a href="ka-prow.html">Ka-Prow</a> - South Austin</li>
-                                <li><a href="lucky-robot.html">Lucky Robot</a> - South Lamar</li>
+                                <li><a href="ka-prow.html">Ka-Prow</a> - South Austin (Thai with GF options)</li>
                             </ul>
                         </div>
 
@@ -188,7 +229,7 @@
                             <ul>
                                 <li><a href="bouldin-creek-cafe.html">Bouldin Creek Cafe</a> - South Austin</li>
                                 <li><a href="vinaigrette.html">Vinaigrette</a> - South Austin</li>
-                                <li><a href="nomade-cocina.html">Nômadé Cocina</a> - South Austin</li>
+                                <li><a href="nomade-cocina.html">Nômadé Cocina</a> - South Austin (100% GF)</li>
                             </ul>
                         </div>
 
