--- a/restaurants/the-well---congress.html
+++ b/restaurants/the-well---congress.html
@@ -153,38 +153,56 @@
                 <div class="detail-grid">
                     <div class="main-content">
                         <div class="section">
-                            <h2>About The Well</h2>
-                            <p class="description">The Well blends clean ingredients, local and sustainable farming, and authentic flavors for a culinary experience that redefines eating well in Austin, Texas.</p>
-                            <p>They merge culinary expertise with intentional sourcing to create a home for conscious nourishment. Working with local farms, nutritionists, and culinary experts, The Well offers healthy meals for dine-in, pick-up, or delivery.</p>
+                            <h2>About The Well - Congress</h2>
+                            <p class="description">The Well - Congress brings 100% gluten-free dining to the heart of downtown Austin, steps from the Texas State Capitol. Every single menu item is safe for celiacs—no questions, no modifications, no anxiety.</p>
+                            <p>The Well blends clean ingredients, local and sustainable farming, and authentic flavors for a culinary experience that redefines eating well in Austin. They merge culinary expertise with intentional sourcing to create a home for conscious nourishment.</p>
+                            <p>Working with local farms, nutritionists, and culinary experts, The Well proves that healthy food can be genuinely delicious—and that dietary restrictions don't have to mean compromising on flavor or experience.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Dietary Information</h2>
-                            <p>The Well is proud to offer recipes that are completely free of:</p>
+                            <h2>Why The Well is Perfect for Celiacs</h2>
+                            <p>The Well offers complete peace of mind—their entire kitchen is free of:</p>
                             <ul class="gf-features">
-                                <li>Gluten</li><li>Dairy</li><li>Seed Oils</li><li>Soy</li><li>Refined Sugar</li><li>GMOs</li>
+                                <li><strong>Gluten:</strong> 100% gluten-free kitchen—everything on the menu is safe</li>
+                                <li><strong>Dairy:</strong> Dairy-free base menu (grass-fed dairy available as add-on)</li>
+                                <li><strong>Seed Oils:</strong> No inflammatory vegetable/seed oils</li>
+                                <li><strong>Soy:</strong> Completely soy-free cooking</li>
+                                <li><strong>Refined Sugar:</strong> Natural sweeteners only</li>
+                                <li><strong>GMOs:</strong> Non-GMO sourcing throughout</li>
                             </ul>
-                            <p>They emphasize the importance of low sugar, healthy fats, and clean oils, utilizing only the highest quality ingredients. Any produce on the "Dirty Dozen" list is organically sourced.</p>
-                            <p>Optional add-ons of premium grass-fed dairy are available to enhance your favorite dishes.</p>
+                            <p>For celiacs who've spent years interrogating waitstaff and worrying about cross-contamination, The Well offers something precious: the ability to order anything on the menu without fear. That peace of mind alone makes it worth visiting.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Why Choose The Well</h2>
-                            <p>The Well takes the guesswork out of eating well, serving up deliciously conscious food no matter your dietary choices. Key features include:</p>
-                            <ul style="margin-left:1.5rem;line-height:1.8;">
-                                <li><strong>Local Sourcing:</strong> Partnerships with local farms for fresh ingredients</li>
-                                <li><strong>Nutritionist Input:</strong> Menus designed with health experts</li>
-                                <li><strong>Clean Cooking:</strong> No inflammatory oils or processed ingredients</li>
-                                <li><strong>Flexible Dining:</strong> Dine-in, takeout, or delivery options</li>
-                                <li><strong>Multiple Locations:</strong> Three convenient Austin locations</li>
+                            <h2>Popular Menu Items</h2>
+                            <ul>
+                                <li><strong>Grass-Fed Burger:</strong> Premium beef on a house-made GF bun with all the fixings</li>
+                                <li><strong>Grain Bowls:</strong> Cauliflower rice or GF grains with proteins and seasonal vegetables</li>
+                                <li><strong>Breakfast Plates:</strong> Pasture-raised eggs, quality proteins, and fresh vegetables</li>
+                                <li><strong>Seasonal Salads:</strong> Fresh, creative salads with house-made dressings</li>
+                                <li><strong>Smoothies:</strong> Nutrient-packed smoothies with clean ingredients</li>
+                                <li><strong>Clean Desserts:</strong> Sweet treats made without gluten, dairy, or refined sugar</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>Location & Hours</h2>
-                            <p>The Congress location is situated near the Texas State Capitol, perfect for downtown workers, tourists, and anyone exploring the heart of Austin.</p>
-                            <p><strong>Address:</strong> 501 Brazos St, Austin, TX 78701</p>
-                            <p>Visit their website for current hours and to make reservations.</p>
+                            <h2>The Congress Location Experience</h2>
+                            <p>The Congress Avenue location is ideally situated for downtown workers, tourists exploring Austin, and anyone near the Capitol. The space reflects The Well's clean-eating philosophy—bright, modern, and welcoming with natural materials and thoughtful design.</p>
+                            <p>This location draws a mix of health-conscious professionals grabbing lunch, tourists looking for a quality meal, and celiac community members who've finally found a restaurant where they can eat with complete confidence.</p>
+                            <p><strong>Pro tip:</strong> Lunch hour gets busy with the downtown crowd. Consider going slightly before or after peak hours for a more relaxed experience.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Community Reviews</h2>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "The Congress location is perfect for my work lunches. I can actually eat with colleagues without stress!" — James K., Downtown Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "As a celiac, finding The Well changed my life in Austin. This Congress location is so convenient for downtown!" — Rebecca M., Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Food is delicious and I feel amazing after eating here. This isn't diet food—it's real food done right." — Chris L., Capitol Area
+                            </blockquote>
                         </div>
 
                         <div class="related-restaurants">
@@ -198,9 +216,9 @@
                         <div class="nearby-restaurants">
                             <h3>Nearby Restaurants</h3>
                             <ul>
-                                <li><a href="atx-cocina.html">ATX Cocina</a> - Downtown Austin</li>
+                                <li><a href="atx-cocina.html">ATX Cocina</a> - Downtown Austin (100% GF)</li>
                                 <li><a href="red-ash.html">Red Ash</a> - Downtown Austin</li>
-                                <li><a href="thai-fresh.html">Thai Fresh</a> - South Austin</li>
+                                <li><a href="salt-traders-coastal-cooking.html">Salt Traders</a> - Downtown Austin (100% GF)</li>
                             </ul>
                         </div>
 
