--- a/restaurants/the-well---westlake.html
+++ b/restaurants/the-well---westlake.html
@@ -153,38 +153,56 @@
                 <div class="detail-grid">
                     <div class="main-content">
                         <div class="section">
-                            <h2>About The Well</h2>
-                            <p class="description">The Well blends clean ingredients, local and sustainable farming, and authentic flavors for a culinary experience that redefines eating well in Austin, Texas.</p>
-                            <p>They merge culinary expertise with intentional sourcing to create a home for conscious nourishment. Working with local farms, nutritionists, and culinary experts, The Well offers healthy meals for dine-in, pick-up, or delivery.</p>
+                            <h2>About The Well - Westlake</h2>
+                            <p class="description">The Well - Westlake brings 100% gluten-free dining to the west side of Austin, serving the Westlake, Bee Cave, and Hill Country communities. Every single menu item is safe for celiacs—making it a true sanctuary for those with gluten sensitivities.</p>
+                            <p>The Well blends clean ingredients, local and sustainable farming, and authentic flavors for a culinary experience that redefines eating well in Austin. They merge culinary expertise with intentional sourcing to create a home for conscious nourishment.</p>
+                            <p>For West Austin residents, The Well Westlake eliminates the need to drive downtown for safe, delicious gluten-free dining. It's become a neighborhood staple for health-conscious families and celiac community members alike.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Dietary Information</h2>
-                            <p>The Well is proud to offer recipes that are completely free of:</p>
+                            <h2>Why The Well is Perfect for Celiacs</h2>
+                            <p>The Well offers complete peace of mind—their entire kitchen is free of:</p>
                             <ul class="gf-features">
-                                <li>Gluten</li><li>Dairy</li><li>Seed Oils</li><li>Soy</li><li>Refined Sugar</li><li>GMOs</li>
+                                <li><strong>Gluten:</strong> 100% gluten-free kitchen—order anything without worry</li>
+                                <li><strong>Dairy:</strong> Dairy-free base menu (grass-fed dairy available as optional add-on)</li>
+                                <li><strong>Seed Oils:</strong> No inflammatory vegetable or seed oils used</li>
+                                <li><strong>Soy:</strong> Completely soy-free cooking</li>
+                                <li><strong>Refined Sugar:</strong> Only natural sweeteners</li>
+                                <li><strong>GMOs:</strong> Non-GMO ingredient sourcing</li>
                             </ul>
-                            <p>They emphasize the importance of low sugar, healthy fats, and clean oils, utilizing only the highest quality ingredients. Any produce on the "Dirty Dozen" list is organically sourced.</p>
-                            <p>Optional add-ons of premium grass-fed dairy are available to enhance your favorite dishes.</p>
+                            <p>The beauty of The Well is the complete absence of anxiety. No need to ask questions, request modifications, or worry about cross-contamination. Everything is safe, always. For celiacs, that's revolutionary.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Why Choose The Well</h2>
-                            <p>The Well takes the guesswork out of eating well, serving up deliciously conscious food no matter your dietary choices. Key features include:</p>
-                            <ul style="margin-left:1.5rem;line-height:1.8;">
-                                <li><strong>Local Sourcing:</strong> Partnerships with local farms for fresh ingredients</li>
-                                <li><strong>Nutritionist Input:</strong> Menus designed with health experts</li>
-                                <li><strong>Clean Cooking:</strong> No inflammatory oils or processed ingredients</li>
-                                <li><strong>Flexible Dining:</strong> Dine-in, takeout, or delivery options</li>
-                                <li><strong>Multiple Locations:</strong> Three convenient Austin locations</li>
+                            <h2>Popular Menu Items</h2>
+                            <ul>
+                                <li><strong>The Well Burger:</strong> Grass-fed beef on house-made GF bun with clean toppings</li>
+                                <li><strong>Build-Your-Own Bowls:</strong> Choose your base, protein, and toppings</li>
+                                <li><strong>Breakfast All Day:</strong> Pasture-raised eggs with quality proteins and vegetables</li>
+                                <li><strong>Seasonal Salads:</strong> Fresh, locally-sourced salads with house-made dressings</li>
+                                <li><strong>Smoothies & Juices:</strong> Cold-pressed juices and nutrient-dense smoothies</li>
+                                <li><strong>GF Desserts:</strong> Treats that satisfy without gluten, dairy, or refined sugar</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>Location & Hours</h2>
-                            <p>The Westlake location is situated on Bee Caves Road, convenient for residents of Westlake, West Austin, and the surrounding hill country area.</p>
-                            <p><strong>Address:</strong> 6317 Bee Caves Road Suite 200, Austin, TX 78746</p>
-                            <p>Visit their website for current hours and to make reservations.</p>
+                            <h2>The Westlake Location Experience</h2>
+                            <p>The Westlake location on Bee Caves Road offers convenient access for residents throughout West Austin, Westlake Hills, Bee Cave, Lakeway, and the surrounding Hill Country communities. The space features the same clean, modern aesthetic as other The Well locations—bright, welcoming, and reflective of the brand's wellness philosophy.</p>
+                            <p>This location attracts health-conscious families, fitness enthusiasts from nearby gyms, and a growing community of celiac diners who've finally found a local restaurant they can trust completely. Parking is convenient, making it easy for quick pickups or leisurely dine-in meals.</p>
+                            <p><strong>Pro tip:</strong> The Well offers online ordering for pickup—great for grabbing a healthy meal on busy days without the wait.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Community Reviews</h2>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Finally, a 100% GF restaurant in Westlake! I don't have to drive downtown anymore for safe dining. The food is incredible." — Patricia K., Westlake Hills
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "My whole family eats here—celiac and non-celiac alike. Everyone loves the food. That says something!" — Michael R., Bee Cave
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "The bowl options are fantastic and I feel energized after eating here. This is what healthy food should be." — Sarah T., Lakeway
+                            </blockquote>
                         </div>
 
                         <div class="related-restaurants">
