--- a/restaurants/true-food-kitchen---arboretum.html
+++ b/restaurants/true-food-kitchen---arboretum.html
@@ -143,46 +143,57 @@
                 <div class="detail-grid">
                     <div class="main-content">
                         <div class="section">
-                            <h2>About True Food Kitchen</h2>
-                            <p class="description">True Food Kitchen was founded on the principles of Dr. Andrew Weil's anti-inflammatory diet, creating a menu that's as delicious as it is nutritious. The restaurant focuses on seasonal, fresh ingredients and offers an extensive array of options for various dietary needs including gluten-free, vegetarian, and vegan.</p>
-                            <p>The Arboretum location brings this health-focused dining experience to Northwest Austin, offering a beautiful space with a seasonal menu that changes to highlight the freshest ingredients available.</p>
+                            <h2>About True Food Kitchen - Arboretum</h2>
+                            <p class="description">True Food Kitchen was founded on the principles of Dr. Andrew Weil's anti-inflammatory diet, creating a menu that's as delicious as it is nutritious. This isn't your typical "healthy" restaurant—the food here is genuinely crave-worthy while also being good for you.</p>
+                            <p>The Arboretum location brings this health-focused dining experience to Northwest Austin, offering a beautiful space with a seasonal menu that changes to highlight the freshest ingredients available. It's become a destination for health-conscious diners who refuse to compromise on flavor.</p>
+                            <p>Part of Fox Restaurant Concepts (also behind Flower Child and North Italia), True Food Kitchen represents the more upscale, full-service expression of their healthy dining philosophy.</p>
                         </div>
 
                         <div class="section">
                             <h2>Gluten-Free Dining at True Food Kitchen</h2>
-                            <p>True Food Kitchen is exceptionally GF-friendly:</p>
+                            <p>True Food Kitchen is exceptionally GF-friendly with a genuine commitment to accommodation:</p>
                             <ul class="gf-features">
-                                <li><strong>Clearly Marked Menu:</strong> GF items labeled with icons on the menu</li>
-                                <li><strong>Extensive Selection:</strong> Many dishes are naturally GF or easily modified</li>
-                                <li><strong>Anti-Inflammatory Focus:</strong> Whole foods approach naturally reduces gluten</li>
-                                <li><strong>Knowledgeable Staff:</strong> Team trained on dietary accommodations</li>
-                                <li><strong>Seasonal Menu:</strong> GF options change with the seasons for variety</li>
+                                <li><strong>Clearly Marked Menu:</strong> GF items labeled with icons throughout the menu</li>
+                                <li><strong>Extensive Selection:</strong> More than half the menu is naturally GF or easily modified</li>
+                                <li><strong>Anti-Inflammatory Focus:</strong> Whole foods approach means less gluten overall</li>
+                                <li><strong>Trained Staff:</strong> Team educated on dietary accommodations and cross-contamination</li>
+                                <li><strong>Seasonal Changes:</strong> GF options evolve with the seasonal menu for variety</li>
+                                <li><strong>Full Bar with GF Options:</strong> Cocktails and wines carefully curated</li>
                             </ul>
-                            <p><strong>Note:</strong> While they have extensive GF options, this is not a dedicated GF kitchen. Always inform your server about celiac disease.</p>
+                            <p><strong>Cross-Contamination Note:</strong> While they have extensive GF options, this is not a dedicated GF kitchen. The kitchen prepares items with gluten, so inform your server about celiac disease for extra precautions. Most celiac diners report good experiences with proper communication.</p>
                         </div>
 
                         <div class="section">
                             <h2>Popular GF Menu Items</h2>
                             <ul>
-                                <li><strong>Ancient Grains Bowl:</strong> Quinoa-based with seasonal vegetables</li>
-                                <li><strong>Grass-Fed Burger:</strong> Available with GF bun or lettuce wrap</li>
-                                <li><strong>Sustainable Fish:</strong> Grilled with seasonal preparations</li>
-                                <li><strong>Seasonal Salads:</strong> Fresh salads with GF dressings</li>
-                                <li><strong>Edamame Dumplings (GF):</strong> Made with rice wrapper</li>
-                                <li><strong>Squash Pie:</strong> Their signature GF dessert</li>
+                                <li><strong>Ancient Grains Bowl (GF):</strong> Quinoa-based with seasonal roasted vegetables, avocado, and tahini</li>
+                                <li><strong>Grass-Fed Burger (GF):</strong> Available with GF bun or lettuce wrap, sustainable beef</li>
+                                <li><strong>Sustainable Fish:</strong> Daily catch prepared with seasonal flavors</li>
+                                <li><strong>Seasonal Salads (GF):</strong> Fresh, creative salads with house-made GF dressings</li>
+                                <li><strong>Edamame Dumplings (GF):</strong> Fan favorite made with rice wrapper</li>
+                                <li><strong>Squash Pie (GF):</strong> Their signature dessert—don't skip it!</li>
+                                <li><strong>Organic Chicken:</strong> Wood-grilled with seasonal preparations</li>
                             </ul>
                         </div>
 
                         <div class="section">
                             <h2>The Dr. Weil Philosophy</h2>
-                            <p>True Food Kitchen's menu is guided by Dr. Andrew Weil's anti-inflammatory food pyramid, emphasizing:</p>
+                            <p>True Food Kitchen's menu is guided by Dr. Andrew Weil's anti-inflammatory food pyramid, emphasizing foods that reduce inflammation and promote health:</p>
                             <ul>
-                                <li>Fresh, seasonal produce</li>
-                                <li>Whole grains (with GF alternatives available)</li>
-                                <li>Healthy fats like olive oil and avocado</li>
-                                <li>Lean proteins and sustainable seafood</li>
-                                <li>Reduced sugar and processed ingredients</li>
+                                <li><strong>Seasonal Produce:</strong> Fresh vegetables and fruits at their peak</li>
+                                <li><strong>Whole Grains:</strong> With GF alternatives like quinoa available</li>
+                                <li><strong>Healthy Fats:</strong> Olive oil, avocado, nuts, and omega-rich fish</li>
+                                <li><strong>Lean Proteins:</strong> Sustainable seafood and organic poultry</li>
+                                <li><strong>Reduced Processed:</strong> Minimal sugar and processed ingredients</li>
                             </ul>
+                            <p>This philosophy naturally aligns with GF eating, making True Food Kitchen one of the most accommodating mainstream restaurants for celiac diners.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Arboretum Experience</h2>
+                            <p>The Arboretum location offers a beautiful, airy dining room with floor-to-ceiling windows, natural materials, and a vibrant atmosphere. The space feels healthy and energizing—exactly what you'd expect from the brand. There's both indoor seating and a pleasant patio for Austin's nice weather days.</p>
+                            <p>This location attracts a mix of health-conscious professionals, families, and groups celebrating special occasions who need a restaurant that can accommodate everyone's dietary needs. The full bar offers craft cocktails and an impressive wine list.</p>
+                            <p><strong>Pro tip:</strong> Weekend brunch is popular—consider reservations. The seasonal menu items are worth exploring, as they change quarterly to highlight the freshest ingredients.</p>
                         </div>
 
                         <div class="section">
@@ -195,16 +206,20 @@
                         <div class="section">
                             <h2>Community Reviews</h2>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "The GF options here are actually exciting, not just afterthoughts. Love the seasonal menu changes." — Patricia L., Austin
+                                "The GF options here are actually exciting, not just afterthoughts. Love the seasonal menu changes and the Squash Pie is incredible!" — Patricia L., Austin
                             </blockquote>
                             <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
-                                "Great for group dinners when everyone has different dietary needs. Plenty of GF, vegan, and regular options." — Tom K., Round Rock
+                                "Great for group dinners when everyone has different dietary needs. Plenty of GF, vegan, and regular options. Everyone leaves happy." — Tom K., Round Rock
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Finally, a nice restaurant where I can eat without stress. The staff really understands celiac and takes it seriously." — Maria S., Northwest Austin
                             </blockquote>
                         </div>
 
                         <div class="nearby-restaurants">
                             <h3>Nearby Restaurants</h3>
                             <ul>
+                                <li><a href="bulevar.html">Bulevar</a> - Arboretum (100% GF)</li>
                                 <li><a href="flower-child---domain.html">Flower Child - Domain</a> - The Domain</li>
                                 <li><a href="snap-kitchen---west-lake-hills.html">Snap Kitchen - West Lake Hills</a> - Westlake</li>
                             </ul>
