--- a/restaurants/bougies-donuts---coffee.html
+++ b/restaurants/bougies-donuts---coffee.html
@@ -153,43 +153,82 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Bougie's Donuts & Coffee</h2>
-                            <p class="description">Gluten-free donut shop and coffee house in Sunset Valley. Specializes in artisanal gluten-free donuts and premium coffee.</p>
+                            <p class="description">Bougie's Donuts & Coffee is a 100% gluten-free donut shop and coffee house in Sunset Valley, bringing the joy of fresh donuts back to the celiac community. Founded by people who understand the frustration of missing out on bakery treats, Bougie's creates artisanal donuts that rival—and often surpass—their gluten-filled counterparts.</p>
+                            <p>Every donut at Bougie's is made from scratch using certified gluten-free ingredients in a dedicated facility. There's no risk of cross-contamination, no need to ask questions—just pure, delicious donuts that everyone can enjoy safely. It's the kind of place celiacs dream about: a real donut shop experience without the anxiety.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Gluten-Free Information</h2>
-                            <p>Bougie's Donuts & Coffee is a 100% gluten-free establishment, making it completely safe for those with celiac disease and gluten sensitivities. All donuts are made in a dedicated gluten-free facility with certified gluten-free ingredients, ensuring no cross-contamination risk.</p>
+                            <h2>Why Bougie's is Perfect for Celiacs</h2>
+                            <p>Bougie's Donuts & Coffee is a completely safe haven for gluten-free diners:</p>
                             <ul class="gf-features">
-                                <li>100% GF</li><li>Celiac Safe</li><li>Dedicated Prep</li>
+                                <li><strong>100% Gluten-Free Facility:</strong> No gluten ingredients ever enter the building—zero cross-contamination risk</li>
+                                <li><strong>Certified GF Ingredients:</strong> All flour and ingredients are certified gluten-free</li>
+                                <li><strong>Celiac Safe:</strong> Safe for those with celiac disease and severe gluten sensitivities</li>
+                                <li><strong>Dedicated Equipment:</strong> All fryers, mixers, and prep surfaces are exclusively gluten-free</li>
+                                <li><strong>Order Anything:</strong> Every item on the menu is safe—no need to ask or verify</li>
                             </ul>
                         </div>
 
                         <div class="section">
-                            <h2>Popular Menu Items</h2>
-                            <p>Specializes in artisanal gluten-free donuts with creative flavors and premium coffee. All items are made fresh daily in a dedicated gluten-free facility. The menu features classic donut varieties as well as seasonal specials, all completely safe for celiacs.</p>
+                            <h2>Popular Donut Flavors</h2>
+                            <p>Bougie's offers a rotating selection of creative flavors alongside classics:</p>
+                            <ul>
+                                <li><strong>Classic Glazed:</strong> The perfect traditional donut, light and sweet</li>
+                                <li><strong>Chocolate Frosted:</strong> Rich chocolate glaze on a fluffy base</li>
+                                <li><strong>Maple Bacon:</strong> Sweet maple glaze topped with crispy bacon pieces</li>
+                                <li><strong>Cinnamon Sugar:</strong> Warm, comforting classic rolled in cinnamon sugar</li>
+                                <li><strong>Seasonal Specials:</strong> Rotating flavors like pumpkin spice, strawberry, and more</li>
+                                <li><strong>Filled Donuts:</strong> Cream-filled and jelly-filled options (when available)</li>
+                            </ul>
+                            <p>Pro tip: Arrive early for the best selection—popular flavors sell out quickly, especially on weekends!</p>
                         </div>
 
                         <div class="section">
-                            <h2>Location & Atmosphere</h2>
-                            <p>Located in Sunset Valley, Bougie's provides a welcoming coffee shop atmosphere perfect for enjoying gluten-free donuts and premium coffee. The space is designed for both grab-and-go and sit-down enjoyment, making it a great spot for breakfast, brunch, or an afternoon treat.</p>
+                            <h2>Coffee & Drinks</h2>
+                            <p>Bougie's pairs their donuts with premium coffee and espresso drinks:</p>
+                            <ul>
+                                <li><strong>Drip Coffee:</strong> Locally roasted, fresh-brewed coffee</li>
+                                <li><strong>Espresso Drinks:</strong> Lattes, cappuccinos, americanos</li>
+                                <li><strong>Cold Brew:</strong> Smooth, refreshing cold brew on tap</li>
+                                <li><strong>Non-Dairy Options:</strong> Oat milk, almond milk, and other alternatives available</li>
+                            </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Bougie's Experience</h2>
+                            <p>Located in the Brodie Oaks shopping area in Sunset Valley, Bougie's offers a cheerful, welcoming atmosphere. The space features a display case of fresh donuts, a coffee bar, and seating for those who want to enjoy their treats on-site. The vibe is casual and friendly—perfect for a weekend morning treat or a midweek pick-me-up.</p>
+                            <p>For celiacs and gluten-free folks, Bougie's represents something special: a normal bakery experience. No explaining your condition, no worried questions about ingredients, no anxiety about cross-contamination. Just walk in, pick your donut, and enjoy. That feeling of normalcy is priceless for those who've spent years avoiding bakeries.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Community Reviews</h2>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "I cried the first time I ate here. It had been 10 years since I'd had a real donut. Bougie's gave me that back." — Michelle T., Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "My non-celiac husband says these are the best donuts he's ever had. Period. Not 'best gluten-free'—just best." — Amanda K., Sunset Valley
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Finally, a place I can take my celiac daughter for a special treat without any stress. We go every Saturday!" — Jennifer R., South Austin
+                            </blockquote>
                         </div>
 
                         <div class="related-restaurants">
-<h3>Similar Restaurants</h3>
-<ul>
-<li><a href="bom-bakeshop.html">Bom Bakeshop</a> - South Austin</li>
-<li><a href="zucchini-kill-bakery.html">Zucchini Kill</a> - East Austin</li>
-</ul>
-</div>
+                            <h3>Similar GF Bakeries</h3>
+                            <ul>
+                                <li><a href="bom-bakeshop.html">Bom Bakeshop</a> - South Austin (GF Mochi Donuts)</li>
+                                <li><a href="zucchini-kill-bakery.html">Zucchini Kill Bakery</a> - Hyde Park (GF Vegan Baked Goods)</li>
+                            </ul>
+                        </div>
 
                         <div class="nearby-restaurants">
-<h3>Nearby Restaurants</h3>
-<ul>
-<li><a href="bouldin-creek-cafe.html">Bouldin Creek Cafe</a> - South Austin</li>
-<li><a href="vinaigrette.html">Vinaigrette</a> - South Austin</li>
-<li><a href="flower-child---south-lamar.html">Flower Child - South Lamar</a> - South Austin (South Lamar)</li>
-</ul>
-</div>
+                            <h3>Nearby Restaurants</h3>
+                            <ul>
+                                <li><a href="bouldin-creek-cafe.html">Bouldin Creek Cafe</a> - South Austin</li>
+                                <li><a href="vinaigrette.html">Vinaigrette</a> - South Austin</li>
+                                <li><a href="flower-child---south-lamar.html">Flower Child - South Lamar</a> - South Austin</li>
+                            </ul>
+                        </div>
 
                     </div>
 
